# IRU-HackU-Osaka-2024

./: readme.md
.github/: pull_request_template.md
core/: pyproject.toml  readme.md  requirements.txt
core/src/: .gitignore  config.json_template  main.py
core/src/audio/: audio_processor.py  processor_linux.py  processor_win.py
core/src/hardware/: button.py
core/src/image/: azure_services.py  image_processor.py  overlay_text.py  processor.py  text_ocr_vision_read.py  text_translator.py
core/src/image/text_ocr/: document.py  vision_ocr.py  vision_read.py
core/src/util/: config.py  default_config.py  default_config_linux.py  font.py  logger.py
phys-button/: README.md  pyproject.toml
phys-button/src/: main.py
ui-reserve/: README.md  config.json  pyproject.toml  ui.py
ui-reserve/src/ui_reserve/: __init__.py
ui-reserve/templates/: index.html
web-ui/: .eslintignore  .eslintrc.cjs  .eslintrc.js  .prettierignore  config.json  package-lock.json  package.json  readme.md
web-ui/public/: config.json  default_config.json
web-ui/src/: config.json
web-ui/src/app/: globals.css  layout.tsx  page.tsx
web-ui/src/app/.next/: trace
web-ui/src/components/: .settings.tsx  settings.tsx
web-ui/src/pages/: page.tsx
web-ui/src/pages/api/: config.js
web-ui/src/utils/: configUtils.ts
