[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "darallium", email = "annihilation0504@gmail.com" }
]
dependencies = [
    "pyaudio>=0.2.14",
    "azure-mgmt-cognitiveservices>=13.5.0",
    "azure-mgmt-authorization>=4.0.0",
    "azure-ai-translation-document>=1.0.0",
    "Pillow>=10.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/core"]
