[project]
name = "phys-button"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tea-creats", email = "annihilation0504@gmail.com" }
]
dependencies = [
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "phys_button:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "fake_rpi>=0.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/phys_button"]
