[project]
name = "ui-reserve"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "darallium", email = "annihilation0504@gmail.com" }
]
dependencies = [
    "flask>=3.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ui_reserve"]
